# fraudguard-mlops

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.local.yml  pyproject.toml
.github/workflows/: api.yml  ci.yml  mlfow.yml  model.yml  register-dryrun  register-dryrun.yml
ci/: quality_gates_import.py
ci/quality-gates/: check_metrics.py
contracts/: data_contract.py
data/: README.md
docs/architecture/: model-lifecycle.md
infra/k8s/base/: deployment.yaml  namespace.yaml  service.yaml
infra/kind/: kind-config.yaml
platform/mlflow/k8s/: kustomization.yaml  minio-bucket-job.yaml  minio.yaml  mlflow.yaml  postgres.yaml
platform/monitoring/dashboards/: fraudguard-dashboard.json
platform/monitoring/k8s/: grafana.yaml  prometheus.yaml
products/fraudguard/: config.py
products/fraudguard/evaluation/: metrics.py  thresholding.py
products/fraudguard/features/: build_features.py  feature_contract.py  preprocessors.py
products/fraudguard/inference/: Dockerfile
products/fraudguard/tests/: test_config.py  test_data_contract.py  test_feature_pipeline.py  test_inference_api.py  test_metrics.py  test_training.py
products/fraudguard/training/: promote.py  register.py  select_best_run.py  (+1 more)
reports/data/: sample_validation.json  validation_report.json
reports/features/: feature_contract.json
reports/mlflow/: mlflow_smoke.txt
reports/model/: metrics.json  promotion_report.json  registration_report.json
scripts/: check_data.py  create_sample.py  create_synthetic_sample.py  mlflow_smoke.py  smoke_test.sh  validate_data.py
(+5 files in other folders)
