[project]
name = "fraudguard-mlops"
version = "0.1.0"
description = "FraudGuard: local production-grade MLOps platform for real-time fraud detection"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "lightgbm>=4.3.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pandera>=0.20.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "joblib>=1.3.0",
    "httpx>=0.27.0",
    "mlflow>=2.14.0",
    "boto3>=1.34.0",
    "psycopg2-binary>=2.9.9",
    "pyarrow>=15.0.0",
    "pytest>=8.0.0",
    "ruff>=0.3.0"
]

[tool.pytest.ini_options]
testpaths = ["products/fraudguard/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    ".fgvenv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["products*"]
exclude = [
    "data*",
    "infra*",
    "gitops*",
    "reports*",
    "platform*",
    "pipelines*",
    "contracts*",
    "streaming*",
    "feature_repo*",
    "docs*",
    "scripts*",
    "ci*"
]